# project_week_1

./: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml
app/: main.py
models/: metrics_catboost.json  metrics_rfc.json
notebooks/: main.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
