[project]
name = "project-week-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "cloudpickle>=3.1.2",
    "fastapi>=0.121.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "torch>=2.9.0",
    "torchutils>=0.0.4",
    "torchvision>=0.24.0",
    "uvicorn>=0.38.0",
]
